# how_to_optimize_convolution_in_CPU

./: CMakeLists.txt  README.md  output.txt
cmake/: CUDA.cmake
src/: Main.cpp  common.cpp  common.h  conv2d.h  conv2d.hpp  gemm.cpp  gemm.h  gpuConv2dTest.cpp  im2col.cpp  im2col.h  im2col_conv2d.cpp  im2col_conv2d.h  im2col_gemm.cpp  im2col_gemm.h  im2col_gemm_conv.cpp  im2col_gemm_conv.h  implicit_conv2d.cpp  implicit_conv2d.h  implicit_gemm.cpp  implicit_gemm.h  naive_conv.cpp  naive_conv.h
src/cuda/: convolution_naive.cu  gemm.cu  im2col.cu  im2col_conv2d.cu  implicit_conv2d.cu  naive_conv.cu  pack4.cu  shfl_test.cu
src/cudnn/: cudnn_test.cpp
test/: CMakeLists.txt  convolution_dnn_fp16.cpp  convolution_fp16.cpp  convolution_kernel_fp16.cu  pooling_dnn_fp32.cpp  pooling_kernel_fp32.cpp  pooling_kernel_fp32.cu
tools/: utils.cpp  utils.h
